--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ azure-functions==1.21.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 faiss-cpu==1.10.0
+uvicorn
 filelock==3.17.0
 fsspec==2025.2.0
 huggingface-hub==0.29.1
